UX/UI & Links Update (minor)

--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -18,7 +18,7 @@
                             </h3>
                             <span class="text-center">
                                 {% if msg %}
-                                    {{ msg | safe }}
+                                    <span class="text-danger"> {{ msg | safe }} </span>
                                 {% else %}
                                     Add your credentials
                                 {% endif %} 
